crates/vize_atelier_core/src/codegen/snapshots/vize_atelier_core__codegen__tests__codegen_v_if_template_fragment_wraps_static_text_in_text_vnode.snap
---
source: crates/vize_atelier_core/src/codegen/tests.rs
assertion_line: 466
expression: output.as_str()
---
const { openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, createTextVNode: _createTextVNode } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, [
    (ready)
      ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
        _createTextVNode("Found packages")
      ], 64 /* STABLE_FRAGMENT */))
      : _createCommentVNode("v-if", true),
    (pending)
      ? (_openBlock(), _createElementBlock("span", { key: 1 }, "updating"))
      : _createCommentVNode("v-if", true)
  ]))
}
