crates/vize_atelier_core/src/codegen/snapshots/vize_atelier_core__codegen__tests__codegen_with_props.snap
---
source: crates/vize_atelier_core/src/codegen/tests.rs
expression: output.as_str()
---
const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", {
    id: "app",
    class: "container"
  }))
}
