crates/vize_atelier_core/src/codegen/snapshots/vize_atelier_core__codegen__tests__root_directive_comment_does_not_create_fragment_hole.snap
---
source: crates/vize_atelier_core/src/codegen/tests.rs
expression: output.as_str()
---
const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("section"))
}
